fixed the spacing buttons for project within portfolio section. = Now fix some of the common bugs I noticed

--- a/styles/components/ProjectCards/ProjectCard.module.css
+++ b/styles/components/ProjectCards/ProjectCard.module.css
@@ -14,7 +14,7 @@
   }
 
   .cardBody {
-    margin: auto;
+    /* margin: auto; */
     text-align: center;
 
     .mediaContainer {
